patch - small fix on topic

--- a/docs/ways-to-integrate/zum-connect.mdx
+++ b/docs/ways-to-integrate/zum-connect.mdx
@@ -232,11 +232,11 @@ Each user will receive a link along with the emails for invoices or subscription
 ## Manage subscriptions
 This library will allow the users to manage their subscriptions (view, cancel or update them). It consists of an iFrame website, hosted by Zūm Rails and referenced in your website.
 
-### View/update subscription using SDK:
+### View/update subscription using SDK
 
 ![SDK manage user](/img/docs/diagrams/flows/flow2.png)
 
-### Cancel subscription using SDK:
+### Cancel subscription using SDK
 
 ![SDK manage user](/img/docs/diagrams/flows/flow3.png)
 
