patch-removing yarn.lock

--- a/docs/data-aggregation/configure.mdx
+++ b/docs/data-aggregation/configure.mdx
@@ -3,3 +3,19 @@ title: Configure
 description:
   How to configure the data aggregation
 ---
+
+# Configure
+
+You can find bellow and easy way to configure the experience of the connector.
+
+On the left side you can configure the user experience and the interace by clicking the dropdown menu. Click to apply and check the right side how it looks like.
+
+<iframe
+    src="https://connector.aggregation.zumrails.com/connector-setup"
+    width="100%"
+    height="652px"
+    frameBorder="0"
+    scrolling="no" >
+</iframe>
+
+Once you are done, click in the button Copy to get your URL, if your are using the **[The Connector UI](./connector-ui)**, or the json to be used in case you are using the **[The Connector SDK](./connector-sdk)**.
