--- a/docs/invoice-and-subscription/product.mdx
+++ b/docs/invoice-and-subscription/product.mdx
@@ -27,6 +27,10 @@ Pricing models reflect your business revenue model. We currently offer the below
 - Standard pricing—Charge the same price for each unit. 
 - Package pricing—Charge by the package, or group of units, like charging $15.00 CAD for every 5 units. Purchases are rounded up by default, so a customer buying 8 units would pay  $30.00 CAD.
 
+Here’s how you can create products/prices:
+
+![Create a product flow](/img/docs/diagrams/flows/flow19.png)
+
 ## Manage existing products and prices
 You can update product details through the Portal or API. For example, you might change the description of a product, or add new product images to use on the Checkout page.
 
