--- a/docs/payments/zum-wallet.mdx
+++ b/docs/payments/zum-wallet.mdx
@@ -15,4 +15,9 @@ If you are using the API, you will need the wallet ID to create transactions inv
 This wallet will have a new Id, however, if you are using the API you can continue using the old wallet Ids (to create transactions, recurrent transactions and request funds). We will automatically update your wallet id to the new one when needed.
 :::
 
-Learn more about Zūm wallet [here](https://www.youtube.com/watch?v=fbQ7A2HuI0o)
+import ReactPlayer from 'react-player/youtube'
+
+<ReactPlayer className='react-player'
+          width='350px'
+          height='250px'
+          url='https://www.youtube.com/watch?v=fbQ7A2HuI0o' />
