patch - add controls to video

--- a/docs/payments/zum-wallet.mdx
+++ b/docs/payments/zum-wallet.mdx
@@ -18,6 +18,6 @@ This wallet will have a new Id, however, if you are using the API you can contin
 import ReactPlayer from 'react-player/youtube'
 
 <ReactPlayer className='react-player'
-          width='350px'
-          height='250px'
+          controls='true'
+          width='100%'
           url='https://www.youtube.com/watch?v=fbQ7A2HuI0o' />
